Toggling the alternative start/end frame range doesn't show in the Graph Editor #57062

Closed
opened 2018-10-04 14:56:10 +02:00 by Hjalti Hjálmarsson · 3 comments

System Information
Xbuntu / AMD

Blender Version
b6c1443

Short description of error
If you toggle on the alternative start/end frame range it give you a dark overlay in the Dopesheet Editor to indicate an alternative start and end. However when you go to the Graph Editor it doesn't show it there.

Exact steps for others to reproduce the error
New file
Change the Viewport into the Dopesheet Editor
In the Timeline, toggle the Alternative Frame Range button
Set the start and end frame to something else (25-50 for example)
...you'll see the dark indication at the start and end frame in the Dopesheet Editor...
Go to the Graph Editor
...it still thinks the original frame range is being used...

**System Information** Xbuntu / AMD **Blender Version** b6c1443 **Short description of error** If you toggle on the alternative start/end frame range it give you a dark overlay in the Dopesheet Editor to indicate an alternative start and end. However when you go to the Graph Editor it doesn't show it there. **Exact steps for others to reproduce the error** New file Change the Viewport into the Dopesheet Editor In the Timeline, toggle the Alternative Frame Range button Set the start and end frame to something else (25-50 for example) ...you'll see the dark indication at the start and end frame in the Dopesheet Editor... Go to the Graph Editor ...it still thinks the original frame range is being used...

Added subscriber: @Hjalti

Added subscriber: @Hjalti

This issue was referenced by blender/blender@7bd5ba5019

This issue was referenced by blender/blender@7bd5ba501944a39c10975087a69f006065a0e75f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: studio/blender-studio#57062
No description provided.