Fix T57062: missing preview range drawing in graph editor.